# trexio_tools

./: .gitignore  README.md  methane_cart.hdf5  requirements.txt  setup.cfg  trexio_run.py
.github/workflows/: publish-to-test-pypi.yml  test.yml
data/: crystal23_mgo_lda.d12  diamond.cif  diamond_k_grid_v2.4.chk  diamond_single_k_v2.3.chk  diamond_single_k_v2.4.chk  methane_sphe.hdf5  out_diamond_pyscf  pyscf_example.py  thiophene.g09.out  water.chk  water.xyz
examples/: README.org  thiophene.gms.out
fortran/: Makefile  trexio_f.f90  trexio_to_fcidump.f90
src/: __init__.py  ao.py  basis.py  check_basis.py  check_mos.py  convert.py  convert_from.py  run_valgrind.sh  trex2champ.py  trexio_run.c  trexio_run.py
src/converters/: cart_sphe.py  convert_aims_trexio.py  convert_back_end.py  convert_from.py  convert_to.py  pyscf_to_trexio.py  trex2champ.py
src/converters/pyscf_to_trexio/: Diamond.cif  out_water_pyscf  pyscf_example.py  pyscf_to_trexio.py  water.chk
src/group_tools/: ao.py  basis.py  check_basis.py  check_mos.py  mo.py  nao.py  nucleus.py
src/trexio_tools/: trexio_run.py
src/trexio_tools/converters/: cart_sphe.py  convert_aims_trexio.py  convert_back_end.py  convert_from.py  convert_to.py  crystal_to_trexio.py  orca_to_trexio.py  pyscf_to_trexio.py
src/trexio_tools/group_tools/: ao.py  basis.py  check_basis.py  check_mos.py  determinant.py  mo.py  nao.py
tests/: test_cart_sphe.py
utilities/: to_gamess_normalization.py
