[metadata]
name = trexio-tools
version = 0.8.0
author = TREX-CoE
author_email = evgenyp@qubit-pharmaceuticals.com
description = Set of tools for TREXIO files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TREX-CoE/trexio_tools
project_urls =
    Bug Tracker = https://github.com/TREX-CoE/trexio_tools/issues
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
	= src
packages = find:
python_requires = >=3.6
install_requires =
    docopt
    resultsFile>=2.4
    trexio>=1.2

[options.entry_points]
console_scripts =
    trexio = trexio_tools.trexio_run:main

[options.packages.find]
where = src
